--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1036,6 +1036,22 @@ video {
   right: -30px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.left-\[20px\] {
+  left: 20px;
+}
+
+.top-\[-45px\] {
+  top: -45px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1409,6 +1425,10 @@ video {
   height: 180px;
 }
 
+.h-\[84px\] {
+  height: 84px;
+}
+
 .min-h-\[1000px\] {
   min-height: 1000px;
 }
@@ -1547,6 +1567,10 @@ video {
   min-width: 2.25rem;
 }
 
+.min-w-\[84px\] {
+  min-width: 84px;
+}
+
 .max-w-5 {
   max-width: 1.25rem;
 }
@@ -1647,6 +1671,14 @@ video {
 
 .max-w-\[225px\] {
   max-width: 225px;
+}
+
+.max-w-\[95px\] {
+  max-width: 95px;
+}
+
+.max-w-\[84px\] {
+  max-width: 84px;
 }
 
 .border-collapse {
@@ -2305,6 +2337,10 @@ video {
   padding-bottom: 2.25rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2529,6 +2565,26 @@ video {
   top: 50%;
 }
 
+.before\:left-\[-6px\]::before {
+  content: var(--tw-content);
+  left: -6px;
+}
+
+.before\:top-\[-6px\]::before {
+  content: var(--tw-content);
+  top: -6px;
+}
+
+.before\:left-\[-7px\]::before {
+  content: var(--tw-content);
+  left: -7px;
+}
+
+.before\:top-\[-7px\]::before {
+  content: var(--tw-content);
+  top: -7px;
+}
+
 .before\:mr-2::before {
   content: var(--tw-content);
   margin-right: 0.5rem;
@@ -2569,6 +2625,11 @@ video {
   height: 6px;
 }
 
+.before\:h-\[98px\]::before {
+  content: var(--tw-content);
+  height: 98px;
+}
+
 .before\:w-2::before {
   content: var(--tw-content);
   width: 0.5rem;
@@ -2592,6 +2653,11 @@ video {
 .before\:w-\[34px\]::before {
   content: var(--tw-content);
   width: 34px;
+}
+
+.before\:w-\[98px\]::before {
+  content: var(--tw-content);
+  width: 98px;
 }
 
 .before\:translate-y-\[-50\%\]::before {
