--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -653,6 +653,12 @@ video {
   }
 }
 
+@media (min-width: 1700px) {
+  .container {
+    max-width: 1700px;
+  }
+}
+
 .blockquote-lines {
   margin-bottom: 1rem;
   display: -webkit-box;
@@ -1611,6 +1617,10 @@ video {
   max-width: 225px;
 }
 
+.max-w-\[250px\] {
+  max-width: 250px;
+}
+
 .max-w-\[25px\] {
   max-width: 25px;
 }
@@ -1970,6 +1980,11 @@ video {
   border-color: #FFFFFF33;
 }
 
+.border-whiteOp-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(231 237 242 / var(--tw-border-opacity));
+}
+
 .border-b-white\/20 {
   border-bottom-color: rgb(255 255 255 / 0.2);
 }
@@ -2123,6 +2138,10 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.fill-white {
+  fill: #fff;
 }
 
 .object-cover {
@@ -2850,6 +2869,11 @@ video {
   margin-bottom: 0px;
 }
 
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(14 136 236 / var(--tw-bg-opacity));
@@ -2893,6 +2917,10 @@ video {
   --tw-gradient-from: #0E88EC var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(14 136 236 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.group:hover .group-hover\:fill-blue-600 {
+  fill: #002D52;
 }
 
 .group:hover .group-hover\:text-blue-400 {
@@ -4148,7 +4176,25 @@ video {
     display: block;
   }
 
+  .xl\:flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:max-w-\[1920px\] {
+    max-width: 1920px;
+  }
+
+  .xl\:border-none {
+    border-style: none;
+  }
+
+  .xl\:bg-transparent {
+    background-color: transparent;
   }
 }
