--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,3 +38,13 @@ body{
     justify-content: center;
     bottom: 0;
 }
+
+
+
+.projectsButton:hover .line-before {
+    width: 50%;
+}
+
+.projectsButton:hover .line-after {
+    width: 50%;
+}
