--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -653,12 +653,6 @@ video {
   }
 }
 
-@media (min-width: 1700px) {
-  .container {
-    max-width: 1700px;
-  }
-}
-
 .blockquote-lines {
   margin-bottom: 1rem;
   display: -webkit-box;
@@ -1054,6 +1048,10 @@ video {
   top: 100%;
 }
 
+.bottom-\[-2px\] {
+  bottom: -2px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1439,6 +1437,10 @@ video {
   height: 100vh;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .min-h-\[1000px\] {
   min-height: 1000px;
 }
@@ -1521,6 +1523,10 @@ video {
   width: 100%;
 }
 
+.w-0 {
+  width: 0px;
+}
+
 .min-w-11 {
   min-width: 2.75rem;
 }
@@ -1543,6 +1549,10 @@ video {
 
 .min-w-\[27px\] {
   min-width: 27px;
+}
+
+.min-w-\[28px\] {
+  min-width: 28px;
 }
 
 .min-w-\[30px\] {
@@ -1788,6 +1798,10 @@ video {
 
 .gap-14 {
   gap: 3.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-4 {
@@ -2537,6 +2551,16 @@ video {
           transition-duration: 300ms;
 }
 
+.duration-300 {
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
+.ease-out {
+  -webkit-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
 .text-content blockquote,
 .text-content b,
 .text-content p {
@@ -2618,6 +2642,51 @@ video {
   top: 50%;
 }
 
+.before\:bottom-0::before {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
+.before\:bottom-\[-10px\]::before {
+  content: var(--tw-content);
+  bottom: -10px;
+}
+
+.before\:bottom-\[0\]::before {
+  content: var(--tw-content);
+  bottom: 0;
+}
+
+.before\:left-0::before {
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.before\:bottom-\[-10\]::before {
+  content: var(--tw-content);
+  bottom: -10;
+}
+
+.before\:bottom-\[-5px\]::before {
+  content: var(--tw-content);
+  bottom: -5px;
+}
+
+.before\:left-\[-100\%\]::before {
+  content: var(--tw-content);
+  left: -100%;
+}
+
+.before\:left-\[-100px\]::before {
+  content: var(--tw-content);
+  left: -100px;
+}
+
+.before\:left-\[0\]::before {
+  content: var(--tw-content);
+  left: 0;
+}
+
 .before\:mr-2::before {
   content: var(--tw-content);
   margin-right: 0.5rem;
@@ -2691,6 +2760,16 @@ video {
 .before\:w-\[98px\]::before {
   content: var(--tw-content);
   width: 98px;
+}
+
+.before\:w-2\/3::before {
+  content: var(--tw-content);
+  width: 66.666667%;
+}
+
+.before\:w-0::before {
+  content: var(--tw-content);
+  width: 0px;
 }
 
 .before\:-translate-x-2\/4::before {
@@ -2783,6 +2862,12 @@ video {
           transition-duration: 300ms;
 }
 
+.before\:duration-300::before {
+  content: var(--tw-content);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
@@ -2806,6 +2891,16 @@ video {
 .after\:top-\[89px\]::after {
   content: var(--tw-content);
   top: 89px;
+}
+
+.after\:bottom-\[-9px\]::after {
+  content: var(--tw-content);
+  bottom: -9px;
+}
+
+.after\:right-0::after {
+  content: var(--tw-content);
+  right: 0px;
 }
 
 .after\:z-0::after {
@@ -2843,6 +2938,16 @@ video {
   width: calc(100% - 300px);
 }
 
+.after\:w-2\/3::after {
+  content: var(--tw-content);
+  width: 66.666667%;
+}
+
+.after\:w-0::after {
+  content: var(--tw-content);
+  width: 0px;
+}
+
 .after\:-translate-x-2\/4::after {
   content: var(--tw-content);
   --tw-translate-x: -50%;
@@ -2871,6 +2976,28 @@ video {
 .after\:bg-white\/20::after {
   content: var(--tw-content);
   background-color: rgb(255 255 255 / 0.2);
+}
+
+.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.after\:transition-all::after {
+  content: var(--tw-content);
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
+.after\:duration-300::after {
+  content: var(--tw-content);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
 }
 
 .last\:mb-0:last-child {
@@ -2915,10 +3042,29 @@ video {
   opacity: 0.75;
 }
 
+.hover\:before\:left-\[0\]:hover::before {
+  content: var(--tw-content);
+  left: 0;
+}
+
+.hover\:before\:w-2\/3:hover::before {
+  content: var(--tw-content);
+  width: 66.666667%;
+}
+
 .before\:hover\:border-blue-500:hover::before {
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgb(10 74 127 / var(--tw-border-opacity));
+}
+
+.hover\:after\:w-2\/3:hover::after {
+  content: var(--tw-content);
+  width: 66.666667%;
+}
+
+.group:hover .group-hover\:w-1\/2 {
+  width: 50%;
 }
 
 .group:hover .group-hover\:from-blue-400 {
@@ -4180,6 +4326,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:top-\[100px\] {
+    top: 100px;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -4192,6 +4342,10 @@ video {
 
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:min-w-\[80px\] {
+    min-width: 80px;
   }
 
   .xl\:max-w-\[1920px\] {
@@ -4217,5 +4371,17 @@ video {
 
   .xl\:bg-transparent {
     background-color: transparent;
+  }
+}
+
+@media (min-width: 1770px) {
+  .\33xl\:flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .\33xl\:hidden {
+    display: none;
   }
 }
