--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -1048,6 +1048,22 @@ video {
   top: 100%;
 }
 
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+
+.right-\[60px\] {
+  right: 60px;
+}
+
+.bottom-\[150px\] {
+  bottom: 150px;
+}
+
+.bottom-\[165px\] {
+  bottom: 165px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1437,6 +1453,10 @@ video {
   height: 100vh;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .min-h-\[1000px\] {
   min-height: 1000px;
 }
@@ -1689,6 +1709,10 @@ video {
   max-width: none;
 }
 
+.max-w-\[260px\] {
+  max-width: 260px;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -1818,6 +1842,10 @@ video {
 
 .gap-\[80px\] {
   gap: 80px;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-x-2 {
@@ -2266,6 +2294,11 @@ video {
 .py-\[60px\] {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -2971,6 +3004,11 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 45 82 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-400:hover {
