--- a/src/scss/blocks/_output.scss
+++ b/src/scss/blocks/_output.scss
@@ -968,6 +968,10 @@ video {
   bottom: -85px;
 }
 
+.bottom-\[165px\] {
+  bottom: 165px;
+}
+
 .bottom-\[200px\] {
   bottom: 200px;
 }
@@ -1008,6 +1012,10 @@ video {
   right: -40px;
 }
 
+.right-\[60px\] {
+  right: 60px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -1046,22 +1054,6 @@ video {
 
 .top-full {
   top: 100%;
-}
-
-.bottom-\[100px\] {
-  bottom: 100px;
-}
-
-.right-\[60px\] {
-  right: 60px;
-}
-
-.bottom-\[150px\] {
-  bottom: 150px;
-}
-
-.bottom-\[165px\] {
-  bottom: 165px;
 }
 
 .-z-10 {
@@ -1355,8 +1347,8 @@ video {
   height: -webkit-fill-available;
 }
 
-.h-\[1000px\] {
-  height: 1000px;
+.h-\[100\%\] {
+  height: 100%;
 }
 
 .h-\[10px\] {
@@ -1451,10 +1443,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[100\%\] {
-  height: 100%;
 }
 
 .min-h-\[1000px\] {
@@ -1651,6 +1639,10 @@ video {
   max-width: 25px;
 }
 
+.max-w-\[260px\] {
+  max-width: 260px;
+}
+
 .max-w-\[270px\] {
   max-width: 270px;
 }
@@ -1707,10 +1699,6 @@ video {
 
 .max-w-none {
   max-width: none;
-}
-
-.max-w-\[260px\] {
-  max-width: 260px;
 }
 
 .border-collapse {
@@ -1816,6 +1804,10 @@ video {
   gap: 3.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1842,10 +1834,6 @@ video {
 
 .gap-\[80px\] {
   gap: 80px;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-x-2 {
@@ -1936,10 +1924,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .rounded-l-lg {
@@ -2068,11 +2052,6 @@ video {
   background-color: rgb(59 110 153 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2087,81 +2066,45 @@ video {
   background-color: rgb(231 237 242 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\.\.\/img\/about\/apartment-bgd\.jpg\'\)\] {
-  background-image: url('../img/about/apartment-bgd.jpg');
+.bg-\[url\(\'\.\/\.\.\/img\/about\/apartment-bgd\.jpg\'\)\] {
+  background-image: url('./../img/about/apartment-bgd.jpg');
 }
 
-.bg-\[url\(\'\.\.\/img\/about\/bgd-sec-changy\.jpg\'\)\] {
-  background-image: url('../img/about/bgd-sec-changy.jpg');
+.bg-\[url\(\'\.\/\.\.\/img\/about\/bgd-sec-changy\.jpg\'\)\] {
+  background-image: url('./../img/about/bgd-sec-changy.jpg');
 }
 
-.bg-\[url\(\'\.\.\/img\/about\/changy-bgd\.png\'\)\] {
-  background-image: url('../img/about/changy-bgd.png');
-}
-
-.bg-\[url\(\'\.\.\/img\/index\/buy-bgd\.jpg\'\)\] {
-  background-image: url('../img/index/buy-bgd.jpg');
-}
-
-.bg-\[url\(\'\.\.\/img\/index\/buy-list-bg\.png\'\)\] {
-  background-image: url('../img/index/buy-list-bg.png');
-}
-
-.bg-\[url\(\'\.\.\/img\/index\/slide-bgd-1\.jpg\'\)\] {
-  background-image: url('../img/index/slide-bgd-1.jpg');
-}
-
-.bg-\[url\(\'\.\.\/img\/index\/slide-bgd-2\.jpg\'\)\] {
-  background-image: url('../img/index/slide-bgd-2.jpg');
-}
-
-.bg-\[url\(\'\.\/\.\.\/\.\.\/\.\.\/img\/icons\/bgd-blue-dor-rd\.svg\'\)\] {
-  background-image: url('./../../../img/icons/bgd-blue-dor-rd.svg');
+.bg-\[url\(\'\.\/\.\.\/img\/about\/changy-bgd\.png\'\)\] {
+  background-image: url('./../img/about/changy-bgd.png');
 }
 
 .bg-\[url\(\'\.\/\.\.\/img\/icons\/bgd-blue-dor-rd\.svg\'\)\] {
   background-image: url('./../img/icons/bgd-blue-dor-rd.svg');
 }
 
-.bg-\[url\(\'\/img\/news\/bgd-single\.jpg\'\)\] {
-  background-image: url('/img/news/bgd-single.jpg');
+.bg-\[url\(\'\.\/\.\.\/img\/index\/buy-bgd\.jpg\'\)\] {
+  background-image: url('./../img/index/buy-bgd.jpg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/img\/index\/buy-list-bg\.png\'\)\] {
+  background-image: url('./../img/index/buy-list-bg.png');
+}
+
+.bg-\[url\(\'\.\/\.\.\/img\/index\/slide-bgd-1\.jpg\'\)\] {
+  background-image: url('./../img/index/slide-bgd-1.jpg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/img\/index\/slide-bgd-2\.jpg\'\)\] {
+  background-image: url('./../img/index/slide-bgd-2.jpg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/img\/news\/bgd-single\.jpg\'\)\] {
+  background-image: url('./../img/news/bgd-single.jpg');
 }
 
 .bg-gradient-to-t {
   background-image: -webkit-gradient(linear, left bottom, left top, from(var(--tw-gradient-stops)));
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\'\.\/img\/index\/slide-bgd-2\.jpg\'\)\] {
-  background-image: url('./img/index/slide-bgd-2.jpg');
-}
-
-.bg-\[url\(\'\.\/img\/about\/apartment-bgd\.jpg\'\)\] {
-  background-image: url('./img/about/apartment-bgd.jpg');
-}
-
-.bg-\[url\(\'\.\/img\/about\/bgd-sec-changy\.jpg\'\)\] {
-  background-image: url('./img/about/bgd-sec-changy.jpg');
-}
-
-.bg-\[url\(\'\.\/img\/about\/changy-bgd\.png\'\)\] {
-  background-image: url('./img/about/changy-bgd.png');
-}
-
-.bg-\[url\(\'\.\/img\/icons\/bgd-blue-dor-rd\.svg\'\)\] {
-  background-image: url('./img/icons/bgd-blue-dor-rd.svg');
-}
-
-.bg-\[url\(\'\.\/img\/index\/buy-bgd\.jpg\'\)\] {
-  background-image: url('./img/index/buy-bgd.jpg');
-}
-
-.bg-\[url\(\'\.\/img\/index\/buy-list-bg\.png\'\)\] {
-  background-image: url('./img/index/buy-list-bg.png');
-}
-
-.bg-\[url\(\'\.\/img\/index\/slide-bgd-1\.jpg\'\)\] {
-  background-image: url('./img/index/slide-bgd-1.jpg');
 }
 
 .from-blue-500 {
@@ -2307,6 +2250,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -2330,11 +2278,6 @@ video {
 .py-\[60px\] {
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -2906,6 +2849,11 @@ video {
   left: 50%;
 }
 
+.after\:left-\[2px\]::after {
+  content: var(--tw-content);
+  left: 2px;
+}
+
 .after\:right-0::after {
   content: var(--tw-content);
   right: 0px;
@@ -2921,39 +2869,19 @@ video {
   top: 50%;
 }
 
-.after\:top-\[89px\]::after {
-  content: var(--tw-content);
-  top: 89px;
-}
-
-.after\:left-0::after {
-  content: var(--tw-content);
-  left: 0px;
-}
-
 .after\:top-\[50\%\]::after {
   content: var(--tw-content);
   top: 50%;
 }
 
-.after\:left-\[2px\]::after {
+.after\:top-\[89px\]::after {
   content: var(--tw-content);
-  left: 2px;
+  top: 89px;
 }
 
 .after\:z-0::after {
   content: var(--tw-content);
   z-index: 0;
-}
-
-.after\:z-\[-1\]::after {
-  content: var(--tw-content);
-  z-index: -1;
-}
-
-.after\:-z-10::after {
-  content: var(--tw-content);
-  z-index: -10;
 }
 
 .after\:block::after {
@@ -2981,6 +2909,11 @@ video {
   width: 0px;
 }
 
+.after\:w-\[130px\]::after {
+  content: var(--tw-content);
+  width: 130px;
+}
+
 .after\:w-\[6px\]::after {
   content: var(--tw-content);
   width: 6px;
@@ -2989,31 +2922,6 @@ video {
 .after\:w-\[calc\(100\%-300px\)\]::after {
   content: var(--tw-content);
   width: calc(100% - 300px);
-}
-
-.after\:w-\[100px\]::after {
-  content: var(--tw-content);
-  width: 100px;
-}
-
-.after\:w-\[1000px\]::after {
-  content: var(--tw-content);
-  width: 1000px;
-}
-
-.after\:w-\[200px\]::after {
-  content: var(--tw-content);
-  width: 200px;
-}
-
-.after\:w-\[120px\]::after {
-  content: var(--tw-content);
-  width: 120px;
-}
-
-.after\:w-\[130px\]::after {
-  content: var(--tw-content);
-  width: 130px;
 }
 
 .after\:-translate-x-2\/4::after {
@@ -3060,12 +2968,6 @@ video {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.after\:bg-whiteOp-400::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(231 237 242 / var(--tw-bg-opacity));
-}
-
 .after\:bg-whiteOp-300::after {
   content: var(--tw-content);
   background-color: #FFFFFF33;
@@ -3106,14 +3008,14 @@ video {
   background-color: rgb(10 74 127 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 45 82 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-400:hover {
@@ -3761,24 +3663,16 @@ video {
     line-height: 1.25rem;
   }
 
+  .md\:leading-\[50px\] {
+    line-height: 50px;
+  }
+
   .md\:leading-\[56px\] {
     line-height: 56px;
   }
 
   .md\:leading-tight {
     line-height: 1.25;
-  }
-
-  .md\:leading-10 {
-    line-height: 2.5rem;
-  }
-
-  .md\:leading-\[55px\] {
-    line-height: 55px;
-  }
-
-  .md\:leading-\[50px\] {
-    line-height: 50px;
   }
 
   .md\:before\:right-\[-180px\]::before {
@@ -4236,11 +4130,6 @@ video {
     background-color: rgb(14 136 236 / var(--tw-bg-opacity));
   }
 
-  .lg\:bg-blue-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(10 74 127 / var(--tw-bg-opacity));
-  }
-
   .lg\:bg-transparent {
     background-color: transparent;
   }
@@ -4250,24 +4139,16 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
-  .lg\:bg-\[url\(\'\.\.\/img\/about\/chang-bgd\.png\'\)\] {
-    background-image: url('../img/about/chang-bgd.png');
+  .lg\:bg-\[url\(\'\.\/\.\.\/img\/about\/chang-bgd\.png\'\)\] {
+    background-image: url('./../img/about/chang-bgd.png');
   }
 
-  .lg\:bg-\[url\(\'\.\.\/img\/index\/buy-bg-desk\.png\'\)\] {
-    background-image: url('../img/index/buy-bg-desk.png');
+  .lg\:bg-\[url\(\'\.\/\.\.\/img\/index\/buy-bg-desk\.png\'\)\] {
+    background-image: url('./../img/index/buy-bg-desk.png');
   }
 
   .lg\:bg-none {
     background-image: none;
-  }
-
-  .lg\:bg-\[url\(\'\.\/img\/about\/chang-bgd\.png\'\)\] {
-    background-image: url('./img/about/chang-bgd.png');
-  }
-
-  .lg\:bg-\[url\(\'\.\/img\/index\/buy-bg-desk\.png\'\)\] {
-    background-image: url('./img/index/buy-bg-desk.png');
   }
 
   .lg\:from-60\% {
@@ -4280,10 +4161,6 @@ video {
 
   .lg\:from-80\% {
     --tw-gradient-from-position: 80%;
-  }
-
-  .lg\:bg-cover {
-    background-size: cover;
   }
 
   .lg\:bg-contain {
@@ -4343,16 +4220,6 @@ video {
     padding-bottom: 6rem;
   }
 
-  .lg\:px-\[80px\] {
-    padding-left: 80px;
-    padding-right: 80px;
-  }
-
-  .lg\:px-\[100px\] {
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-
   .lg\:pb-14 {
     padding-bottom: 3.5rem;
   }
@@ -4391,10 +4258,6 @@ video {
 
   .lg\:pt-5 {
     padding-top: 1.25rem;
-  }
-
-  .lg\:pt-\[100px\] {
-    padding-top: 100px;
   }
 
   .lg\:text-left {
@@ -4468,10 +4331,6 @@ video {
     border-bottom-width: 2px;
   }
 
-  .lgs\:border-current {
-    border-color: currentColor;
-  }
-
   .lgs\:border-b-whiteOp-300 {
     border-bottom-color: #FFFFFF33;
   }
@@ -4520,5 +4379,39 @@ video {
 
   .\33xl\:hidden {
     display: none;
+  }
+}
+
+.\[\&\>\.image\:nth-child\(3n\+1\)\]\:col-start-1>.image:nth-child(3n+1) {
+  grid-column-start: 1;
+}
+
+.\[\&\>\.image\:nth-child\(3n\+1\)\]\:col-end-3>.image:nth-child(3n+1) {
+  grid-column-end: 3;
+}
+
+@media (min-width: 768px) {
+  .md\:\[\&\>\.image\:nth-child\(3n\+1\)\]\:col-start-auto>.image:nth-child(3n+1) {
+    grid-column-start: auto;
+  }
+
+  .md\:\[\&\>\.image\:nth-child\(3n\+1\)\]\:col-end-auto>.image:nth-child(3n+1) {
+    grid-column-end: auto;
+  }
+
+  .md\:\[\&\>\.image\:nth-child\(7n\+1\)\]\:col-start-1>.image:nth-child(7n+1) {
+    grid-column-start: 1;
+  }
+
+  .md\:\[\&\>\.image\:nth-child\(7n\+1\)\]\:col-end-3>.image:nth-child(7n+1) {
+    grid-column-end: 3;
+  }
+
+  .md\:\[\&\>\.image\:nth-child\(7n\+7\)\]\:col-start-2>.image:nth-child(7n+7) {
+    grid-column-start: 2;
+  }
+
+  .md\:\[\&\>\.image\:nth-child\(7n\+7\)\]\:col-end-4>.image:nth-child(7n+7) {
+    grid-column-end: 4;
   }
 }
